--- a/historia.html
+++ b/historia.html
@@ -10,7 +10,8 @@
     del conocimiento sobre el sector gastronómico, específicamente la pastelería. Viendo la
     oportunidad de crecer en el rubro de lo dulce, se inicia este emprendimiento con “Rolls” hechos a
     base de canela">
-  <meta name="keywords" content="historia, que es un roll de canela, rolls, roll de canela, pedidos ya, rappi, delivery de roll de canela">
+    <meta name="keywords"
+        content="historia, que es un roll de canela, rolls, roll de canela, pedidos ya, rappi, delivery de roll de canela">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
