--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cynnamom Rolls - CONTACTO</title>
     <meta name="description" content="Esperamos tus consultas y pedidos">
-  <meta name="keywords" content="contacto, promociones, descuentos, preguntas, rolls, roll de canela, pedidos ya, rappi, delivery de roll de canela">
+    <meta name="keywords"
+        content="contacto, promociones, descuentos, preguntas, rolls, roll de canela, pedidos ya, rappi, delivery de roll de canela">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
