--- a/contacto.html
+++ b/contacto.html
@@ -32,7 +32,7 @@
             </li>
         </ul>
     </nav>
-    <div>
+    <div class="fondoTitulos">
         <h1>CONTACTO</h1>
     </div>
     <hr>
