--- a/historia.html
+++ b/historia.html
@@ -35,7 +35,7 @@
             </li>
         </ul>
     </nav>
-    <div>
+    <div class="fondoTitulos">
         <h1>HISTORIA</h1>
     </div>
     <hr>
