--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
         aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
+      <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+        aria-label="Slide 3"></button> -->
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -46,9 +46,9 @@
       <div class="carousel-item">
         <img src="img/Foto-2-Portada.png" class="d-block w-100 medidasImg" alt="roll">
       </div>
-      <div class="carousel-item">
+      <!-- <div class="carousel-item">
         <img src="img/rolls-3.jpeg" class="d-block w-100 medidasImg" alt="roll">
-      </div>
+      </div> -->
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
       data-bs-slide="prev">
