--- a/productos.html
+++ b/productos.html
@@ -30,14 +30,14 @@
             <li class="nav"><a href="menu.html">Menu</a></li>
         </ul>
     </nav>
-    <div>
+    <div class="fondoTitulos">
         <h1>NUESTROS PRODUCTOS</h1>
     </div>
     <hr>
     <div class="grid">
         <div><img src="img/rollClasico.jpeg" alt="rolls" class="imgPro"></div>
         <div>
-            <p>DELICIOSO ROLL CLASICO</p>
+            <p>ROLL CLASICO</p>
         </div>
         <div><img src="img/rollsx4.jpeg" alt="rollsDdl" class="imgPro"></div>
         <div>
