--- a/contacto.html
+++ b/contacto.html
@@ -58,8 +58,7 @@
 
     </form>
     <div>
-        <h2>UBICACION Y HORARIOS</h2>
-        <hr>
+        <h2>UBICACION</h2>
         <div class="flexApp">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13139.929170718962!2d-58.4286386!3d-34.5793146!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe544c51f98566384!2sCYNNAMOMROLLS!5e0!3m2!1ses-419!2sar!4v1624858984962!5m2!1ses-419!2sar"
