--- a/productos.html
+++ b/productos.html
@@ -37,35 +37,35 @@
     <div class="grid">
         <div><img src="img/rollClasico.jpeg" alt="rolls" class="imgPro"></div>
         <div>
-            <p>ROLL CLASICO</p>
+            <p class="nombreProductos">ROLL CLASICO</p>
         </div>
         <div><img src="img/rollsx4.jpeg" alt="rollsDdl" class="imgPro"></div>
         <div>
-            <p>ROLL CON DULCE DE LECHE</p>
+            <p class="nombreProductos">ROLL CON DULCE DE LECHE</p>
         </div>
         <div><img src="img/frutosRojos.jpeg" alt="rollFrutos" class="imgPro"></div>
         <div>
-            <p>ROLL CON FRUTOS ROJOS</p>
+            <p class="nombreProductos">ROLL CON FRUTOS ROJOS</p>
         </div>
         <div><img src="img/lentejasRoll.jpeg" alt="rollLentejas" class="imgPro"></div>
         <div>
-            <p>ROLL CON LENTEJAS DE CHOCOLATE</p>
+            <p class="nombreProductos">ROLL CON LENTEJAS DE CHOCOLATE</p>
         </div>
         <div><img src="img/rollsx4.jpeg" alt="rollNutella" class="imgPro"></div>
         <div>
-            <p>ROLL CON NUTELLA</p>
+            <p class="nombreProductos">ROLL CON NUTELLA</p>
         </div>
         <div><img src="img/oreoRollx4.jpeg" alt="rollOreo" class="imgPro"></div>
         <div>
-            <p>ROLL CON GALLETA OREO</p>
+            <p class="nombreProductos">ROLL CON GALLETA OREO</p>
         </div>
         <div><img src="img/partyRolls.jpeg" alt="partyRolls" class="imgPro"></div>
         <div>
-            <p>PARTY ROLLS</p>
+            <p class="nombreProductos">PARTY ROLLS</p>
         </div>
         <div><img src="img/topping.jpg" alt="topping" class="imgPro"></div>
         <div>
-            <p>TOPPINGS | LESTEJAS DE CHOCOLATE Y CHIPS DE CHOCOLATE
+            <p class="nombreProductos">TOPPINGS | LESTEJAS DE CHOCOLATE Y CHIPS DE CHOCOLATE
             </p>
         </div>
     </div>
