--- a/productos.html
+++ b/productos.html
@@ -65,7 +65,7 @@
         </div>
         <div><img src="img/topping.jpg" alt="topping" class="imgPro"></div>
         <div>
-            <p class="nombreProductos">TOPPINGS | LESTEJAS DE CHOCOLATE Y CHIPS DE CHOCOLATE
+            <p class="nombreProductos">TOPPINGS | LENTEJAS DE CHOCOLATE Y CHIPS DE CHOCOLATE
             </p>
         </div>
     </div>
